<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            />
        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            />
        <TextView
            android:id="@+id/DeviceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:padding="12dp"
            />
        <Button
            android:id="@+id/savebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:layout_marginTop="18dp"
            />
        <Button
            android:id="@+id/deletebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</ScrollView>